--- a/V14/package.json
+++ b/V14/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "mapbox": "^1.0.0-beta10",
     "method-override": "^3.0.0",
     "mongoose": "^5.2.12",
     "passport": "^0.4.0",
