--- a/V15/package.json
+++ b/V15/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "locus": "^2.0.1",
     "mapbox": "^1.0.0-beta10",
     "method-override": "^3.0.0",
     "moment": "^2.22.2",
